# vladoom

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Cube.cpp.AF8CD37094DF7A3A.idx  Cube.h.99BEC38C116E62AB.idx  Door.cpp.D3044B170CBE5836.idx  EBO.cpp.1E275453A51BC4DB.idx  EBO.h.668F4002F065D1A7.idx  Hud.cpp.EB7523F254877A2F.idx  Plane.cpp.09F154F9141F70EE.idx  Plane.h.9119F53668F4F609.idx  Symbol.cpp.DA93CEE23E8C096C.idx  Texture.cpp.54532940A7BEA9FD.idx  Texture.h.6346D95C9E667BDA.idx  VAO.cpp.E35BD8FC4B1E1E19.idx  VAO.h.6FE669352B510A1E.idx  VBO.cpp.3C0362652F61966F.idx  VBO.h.20E61E8F7FBB51CA.idx  VPlane.cpp.D5C9B5DCBED91427.idx  VPlane.h.AFC0EEC9DDED4BC9.idx  VladEngine.hpp.B5A1DB4300CC358D.idx  _fixes.hpp.0F48C417775984F5.idx  _vectorize.hpp.F796E45C4427018F.idx  collisions.h.181A4A6558397C74.idx  common.hpp.E890BA415F2AAE76.idx  compute_common.hpp.DED402014810C966.idx  compute_vector_decl.hpp.866B048D68B7F5D3.idx  compute_vector_relational.hpp.83AEB571E7FDA284.idx  constants.h.D9142FDAA48B8433.idx  constants.hpp.3A323D0165416C5F.idx  constants.inl.404A164F75787F8A.idx  convert.cpp.A529808A5F96B6CB.idx  door.h.4E26BB12724CF245.idx  enemy.cpp.B2674CDB8A668BD3.idx  epsilon.hpp.BEC658B155282C9C.idx  epsilon.inl.BB112636B3C85EC4.idx  exponential.hpp.C2B537AA077DA64D.idx  func_common.inl.3910EB6DD45D954F.idx  func_exponential.inl.D807C67F9F5D1DC8.idx  func_geometric.inl.D2761405A78D2506.idx  func_integer.inl.9475E51E8BEA1121.idx  func_matrix.inl.B16B1EA690A34EF4.idx  func_packing.inl.2367C1565388947F.idx  (+183 more)
Header files/: Cube.h  Plane.h  Texture.h  VAO.h  VBO.h  VPlane.h  camera.h  collisions.h  constants.h  door.h  game.h  hud.h  libs.h  program.h  programShader.h  settings.h  settingsAndVars.h  structs.h  symbol.h
Output files/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main  vladoom
Output files/.cmake/api/v1/reply/: cache-v2-0f680756a154a24343cc.json  (+19 more)
Resource files/Shaders/map/: map.frag  map.vert
Resource files/Shaders/map1/: map.frag  map.vert
Source files/: Cube.cpp  Door.cpp  EBO.cpp  Hud.cpp  Plane.cpp  Texture.cpp  VAO.cpp  VBO.cpp  VPlane.cpp  enemy.cpp  game.cpp  gun.cpp  inputs.cpp  main.cpp  matrices.cpp  program.cpp  programShader.cpp  solve.cpp  symbol.cpp
headers/: collisions.h  constants.h  door.h  game.h  hud.h  input.h  libs.h  secret_door.h  settings.h
main/cpp/OpenGL/vladoom/: .gitignore  CMakeLists.txt  README.md
resource/Shaders/map/: map.frag  map.vert
resource/Shaders/map1/: map.frag  map.vert
resource/Shaders/object/: obj.frag  obj.vert
src/: Door.cpp  Hud.cpp  dog.cpp  enemy.cpp  furniture.cpp  game.cpp  gun.cpp  inputs.cpp  item.cpp  main.cpp  main_menu.cpp  menu.cpp  pause.cpp  secret_door.cpp  settings.cpp  stage1.cpp
src/ENG/: Cube.cpp  Cube.h  EBO.h  Plane.cpp  Plane.h  Texture.h  VAO.h  VBO.cpp  VPlane.cpp  VPlane.h  image.cpp  image.h  programShader.cpp  programShader.h  symbol.cpp  symbol.h
(+17 files in other folders)
